--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="modnorm.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Blinker:wght@300;400;600&family=Skranji&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="thumbnail">
-        <img src="images/doggy.jpg">
+    <div class="mediacard">
+        <div class="card-pic">
+            <img src="images/doggy.jpg">
+        </div>
         <div class="thumbnail-text">
-            <h2>😍These Cute Puppies Will Brighten Your Day 🐶 | Cute Puppies</h2>
+            <h2>These Cute Puppies Will Brighten Your Day</h2>
         </div>
     </div>
 </body>
